# man-down

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: pi-build.yml
deploy/: .env  aclfile  deploy-example.sh  deploy.sh  man_down.service  mosquitto-dev.conf  passwordfile
deploy/scripts/: gen-certs.sh  gen-mqtt-auth.sh
docs/: provisioning.md  systemarchitecture.md
edge/: .gitignore  edge_device.fzz  edge_wiring_diagram.fzz  platformio.ini  sdkconfig.esp32-h2-devkitm-1  sdkconfig.esp32-h2-devkitm-1.old
edge/src/: CMakeLists.txt  auth.c  auth.h  ble.c  ble.h  ble_core.c  ble_gap.c  ble_gatt_client.c  ble_gatt_client.h  ble_internal.h  ble_nodes.c  ble_nodes.h  ble_tx.c  ble_tx.h  edge_config.h  edge_protocol.h  idf_component.yml  main.c  sensors.c  sensors.h
edge_sim/: Dockerfile  simulator.py  subscriber.py
fog/: .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  man_down.service  mosquitto-dev.conf  mosquitto.conf.example
fog/scripts/: gen-certs2.sh  reset-dev-state.sh  run-fog.sh
fog/src/: app_config.rs  events.rs  main.rs  shared_state.rs
fog/src/ble/: config.rs  mod.rs  server.rs
fog/src/mqtt/: client.rs  config.rs  mod.rs
fog/src/provisioning/: manager.rs  mod.rs  models.rs  scheduler.rs  state.rs
fog/src/rfid/: mod.rs  models.rs  reader.rs  service.rs  state.rs
fog/src/storage/: sqlite.rs
fog_node/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  fog.db  fog_wiring_diagram.fzz  mosquitto-dev.conf  mosquitto.conf.example
fog_node/.github/workflows/: pi-build.yml
fog_node/data/: fog.db
fog_node/data/data/: fog.db
fog_node/scripts/: gen-certs.sh  start-mosquitto.sh
fog_node/src/: config.rs  events.rs  main.rs  mqtt.rs  storage.rs
fog_node/src/mqtt/: client.rs  config.rs
fog_node/src/storage/: sqlite.rs
fog_node/tests/: README.md
mesh_esp_version/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-c6-devkitc-1.old
mesh_esp_version/src/: CMakeLists.txt  auth.c  auth.h  auth_store.h  ble.c  ble.h  broker_ca_cert.pem  main.c  mqtt.c  node.c  node.h  provision.c  wifi.c  wifi.h
mesh_esp_version/src/config/: user_config.c  user_config.h
mesh_esp_version/src/events/: event_task.c  event_task.h  node.c  node.h  system_events.h
mesh_esp_version/src/peripherals/: onboard_led.c  onboard_led.h
mesh_esp_version/src/security/: auth.c  auth.h  auth_common.h
mesh_esp_version/src/storage/: auth_store.c  auth_store.h
mesh_esp_version/src/wifi_ble/: ble.c  ble.h  mqtt.c  mqtt.h  provision.c  provision.h  wifi.c
mesh_node/: .gitignore  README  mesh_node.fzz  platformio.ini
mesh_node/certs/: ca.crt  ca_cert.hpp
mesh_node/src/: auth_node.cpp  auth_node.hpp  ble_gatt_peripheral.cpp  ble_gatt_peripheral.hpp  boot.cpp  boot.hpp  config.hpp  edge_event.hpp  eeprom_store.hpp  led_graphics.cpp  led_graphics.hpp  main.cpp  mqtt_client.cpp  mqtt_client.hpp  node.cpp  node.hpp  personal_setup.hpp  personal_setup_template.hpp  time_keeper.cpp  time_keeper.hpp
(+40 files in other folders)
