[package]
name = "fog"
version = "0.1.0"
edition = "2024"

[dependencies]

dbus = { version = "0.9", features = ["vendored"] }
libdbus-sys = { version = "0.2", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rumqttc = "0.23"
rusqlite = { version = "0.29", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

tokio-rustls = "0.24"
rustls-pemfile = "1"
rand = "0.8"
hex = "0.4"
bluer = { version = "0.17", features = ["bluetoothd"] }
uuid = "1"
futures = "0.3"
rppal = "0.22"
rppal_mfrc522 = "0.4"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
