[package]
name = "fog_node"
version = "0.1.0"
edition = "2024"

[dependencies]
# JSON- serialisering
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tidsstämplar
chrono = { version = "0.4", features = ["serde"] }

# MQTT- klient
rumqttc = "0.15"

# SQLite
rusqlite = { version = "0.29", features = ["bundled"] }

# Logging (bra för debug)
log = "0.4"
env_logger = "0.10"

# Async
tokio = { version = "1", features = ["full"] }
