[package]
name = "fog_node"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rumqttc = "0.23"
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

tokio-rustls = "0.24"
rustls-pemfile = "1"
